--- a/RNNvsLSTM/configs/params.yaml
+++ b/RNNvsLSTM/configs/params.yaml
@@ -2,23 +2,19 @@
 paths:
   results: /Users/june/Documents/results/RNNvsLSTM
 
-dataset:
-  input_seq:
-  output_seq:
-  resize:
-
 arch:
   batch_size:
   learning_rate:
   num_epochs:
-  dropout:
 
 model:
   """
   model type 0 for RNN
              1 for LSTM
   """
-  model_type: 
+  model_type:
+  input_size:
+  output_size:
   hidden_size:
   num_layers:
   
