--- a/RNNvsLSTM/configs/params.yaml
+++ b/RNNvsLSTM/configs/params.yaml
@@ -1,17 +1,19 @@
 
 paths:
+  data_path: /Users/june/Documents/data/secom/secom.data
+  labels_path: /Users/june/Documents/data/secom/secom_labels.data 
   results: /Users/june/Documents/results/RNNvsLSTM
 
 arch:
   batch_size: 2
+  num_workers: 5
   learning_rate: 0.005
   num_epochs: 20
 
 model:
-  """
-  model type 0 for RNN
-             1 for LSTM
-  """
+  
+  #model type 0 for RNN
+  #           1 for LSTM
   model_type: 0
   input_size: 5
   output_size: 1
