--- a/RNNvsLSTM/configs/params.yaml
+++ b/RNNvsLSTM/configs/params.yaml
@@ -1,11 +1,17 @@
 
+system:
+  gpus:
+    strategy: auto
+    num_devices: 1
+    accelerator: cpu
+
 paths:
   data_path: /Users/june/Documents/data/secom/secom.data
   labels_path: /Users/june/Documents/data/secom/secom_labels.data 
   results: /Users/june/Documents/results/RNNvsLSTM
 
 arch:
-  batch_size: 2
+  batch_size: 64
   num_workers: 5
   learning_rate: 0.005
   num_epochs: 20
