--- a/RNNvsLSTM/configs/params.yaml
+++ b/RNNvsLSTM/configs/params.yaml
@@ -21,8 +21,9 @@ model:
   #model type 0 for RNN
   #           1 for LSTM
   model_type: 0
+  num_class: 2
   input_size: 5
   output_size: 1
-  hidden_size: 128
+  hidden_size: 64
   num_layers: 2
-  
+   
