--- a/CNT_LSTM/configs/params.yaml
+++ b/CNT_LSTM/configs/params.yaml
@@ -22,6 +22,8 @@ arch:
   teacher_forcing: 1
 
 model:
+  # 1 for LSTM 0 for RNN
+  type: 1
   input_size: 160000
   hidden_size: 128 
   output_size: 160000
