--- a/Classifiers/configs/params.yaml
+++ b/Classifiers/configs/params.yaml
@@ -7,7 +7,7 @@ system:
     accelerator: mps
 
 dataset:
-  type: 0
+  type: 1
   save: 0
   augmentations: 1
 
@@ -15,3 +15,10 @@ dataset:
 paths:
   data: /Users/june/Documents/data 
 
+
+network:
+  arch: 0
+  optimizer: 1
+  batch_size: 32
+  num_epochs: 100
+  learning_rate: 0.01
