--- a/Classifiers/configs/params.yaml
+++ b/Classifiers/configs/params.yaml
@@ -10,15 +10,18 @@ dataset:
   type: 0
   binarize: 1
   save: 0
-  augmentations: 1
+  augmentations: 0
 
 paths:
   data: /Users/june/Documents/data 
 
+algorithm:
+  n_pca: 10
+
 network:
   arch: 0
   optimizer: 1
-  batch_size: 64
+  batch_size: 8
   num_epochs: 100
   learning_rate: 0.01
 
